--- a/h2wp.tex
+++ b/h2wp.tex
@@ -49,9 +49,11 @@
 %% question 1
 
 \question
-سه مهرۀ رخ متمایز و صفحه شطرنجی $8\times8$ داریم. به چند روش می‌توان این سه مهره را در سه خانه از این صفحه قرار داد به طوری که حداقل یک مهره وجود داشته باشد که توسط هیچ مهره‌ای تهدید نمی شود؟
+
+
+سه مهره رخ متمایز و صفحه شطرنجی $8\times8$ داریم. به چند روش می‌توان این سه مهره را در سه خانه از این صفحه قرار داد به طوری که حداقل یک مهره وجود داشته باشد که توسط هیچ مهره‌ای تهدید نمی‌شود؟
 \solution
-  سوال را با اصل متمم حل می کنیم:\\
+  سوال را با اصل متمم حل می‌کنیم:\\
       -  کل حالات:\\
         \[64\times63\times62\]
       -  حالات نامطلوب: حالاتی که همه رخ‌ها تهدید بشوند.\\
@@ -664,13 +666,17 @@ $ x_1 $
  
  %%%%%%%%%%%%%%%%%%%%%% question 1 %%%%%%%%%%%%%%%%%%%%%%%%%
  \question
- اعداد ۱ تا ۲۰ را روی تخته نوشته ایم. هر بار می‌توانیم دو عدد a, b را از روی تخته پاک کرده و عدد ab + a + b را روی تخته بنویسیم. عدد نهایی روی تخته را بیابید.
+ 
+ 
+ اعداد ۱ تا ۲۰ را روی تخته نوشته‌ایم. هر بار می‌توانیم دو عدد $ a, b$ را از روی تخته پاک کرده و عدد ab + a + b را روی تخته بنویسیم. عدد نهایی روی تخته را بیابید.
  
  
  \solution
- در هربار حاصل ضرب اعداد روی تخته + 1 ثابت است. این عدد برابر  $ 21!$  است. پس عدد نهایی $21! - 1 $  خواهد بود.
- \\
  
+ 
+ در هربار حاصل ضرب اعداد روی تخته + 1 ثابت است. این عدد برابر  $ 21!$  است. پس عدد نهایی $21! - 1 $  خواهد بود.
+
+
  \notes
  
  
@@ -683,11 +689,12 @@ $ x_1 $
  بوده است.
  
 \Tnote{n25}
- اثبات ناوردا بودن یک مقدار از مهم‌ترین موارد مساله‌ها‌ی ناوردایی می‌باشد. در این پاسخ این مورد اثبات نشده است.
+ اثبات ناوردا بودن یک مقدار از مهم‌ترین موارد مساله‌ها‌ی ناوردایی می‌باشد. در این پاسخ، این مورد اثبات نشده است.
  
  
  \solution*{پاسخ صحیح}
- \\
+
+
   مساله را با ناوردائی حل می‌کنیم. سوال را برای اعداد دلخواه حل کرده سپس اعداد یک تا بیست را در نتیجه‌ی نهایی لحاظ می‌کنیم. فرض می‌کنیم در ابتدای مساله اعداد 
     $\mathrm{x}_{20}$
     ,
@@ -702,13 +709,16 @@ $ x_1 $
     $\mathrm{y}_{i}$
     را به این صورت در نظر می‌گیریم:      
     $\mathrm{y}_{i} = \mathrm{x}_{i} + 1$\\
-    \\
+    
+    
     مقدار ناوردا را
     $\mathrm{S}$
     در نظر می‌گیریم و آن به صورت زیر تعریف می‌کنیم:
     \begin{align} \nonumber
         \mathrm{S} = \mathrm{y}_{1} \times \mathrm{y}_{2} \times \ldots \times \mathrm{y}_{19} \times \mathrm{y}_{20} \nonumber
     \end{align}
+    
+    
     ادعا می‌کنیم در هر مرحله با برداشتن دو عدد دلخواه
     $ \mathrm{a}$
     و
@@ -718,7 +728,8 @@ $ x_1 $
     به جای آن، مقدار
     $\mathrm{S}$
     ثابت می‌ماند. حال به اثبات آن می‌پردازیم:\\
-    \\
+    
+      
     فرض می‌کنیم در مرحله‌‌ی اول دو عدد دلخواه
     $\mathrm{x}_{i}$و $\mathrm{x}_{j}$
     را انتخاب می‌کنیم و به جای آن
@@ -735,13 +746,17 @@ $ x_1 $
         S &= \mathrm{(\prod_{k=1,k\neq i,j}^{20} ({x}_k + 1))((({x}_i + 1)({x}_j + 1)-1)+1)} \\ \nonumber
         & = \mathrm{(\prod_{k=1,k\neq i,j}^{20} ({x}_k + 1))({x}_i + 1)({x}_j + 1)}\\ \nonumber
         & =\mathrm{ ({x}_1 + 1)({x}_2 + 1)\ldots({x}_{20} + 1)}    \nonumber 
-    \end{align}    
+    \end{align} 
+    
+       
     بنابراین در هرگام و با انتخاب هر دو عدد دلخواه، مقدار تعریف شده برای
     $\mathrm{S}$
     ثابت خواهد ماند. بدین ترتیب عدد باقیمانده روی تخته برای اعداد یک تا بیست برابر است با:
     \begin{align} \nonumber
         \mathrm{(1 + 1)(2 + 1)\ldots(20 + 1) - 1= 21!-1}  \nonumber     
     \end{align}
+    
+    
     (از آن‌جایی که مقدار ناوردا بر اساس 
     $\mathrm{{y}_i}$
     تعریف شده است. در نهایت مقدار نهایی که براساس
@@ -752,7 +767,9 @@ $ x_1 $
     
     %%%%%%%%%%%%%%%%%%%%%%%% question 2 %%%%%%%%%%%%%%%%%
     \question
-    در یک ردیف ۲۰۰۰ عدد نوشته شده است. فرض کنید به ازای هر عدد a در این دنباله، f(a) برابر با تعداد دفعاتی باشد که a در دنباله آمده است. در هر مرحله به ازای هر عضوی از دنباله مثل x مقدار f(x) را زیر آن می‌نویسیم تا یک دنباله ۲۰۰۰ تایی جدید حاصل شود. آیا می‌توان این دنباله را تا ابد ادامه داد به‌ظوری که هیچ دو دنباله متوالی باهم برابر نباشند؟
+    
+    
+    در یک ردیف ۲۰۰۰ عدد نوشته شده است. فرض کنید به ازای هر عدد a در این دنباله، f(a) برابر با تعداد دفعاتی باشد که a در دنباله آمده است. در هر مرحله به ازای هر عضوی از دنباله مثل x مقدار f(x) را زیر آن می‌نویسیم تا یک دنباله ۲۰۰۰ تایی جدید حاصل شود. آیا می‌توان این دنباله را تا ابد ادامه داد به ‌طوری که هیچ دو دنباله متوالی باهم برابر نباشند؟
     
     
     \solution
@@ -760,11 +777,12 @@ $ x_1 $
    \\
     \notes
     \Tnote{n26}
-    استدلال فوق شهودی است و شهود به هیچ غنوان ارزش ریاضی ندارد.
+    استدلال فوق شهودی است و شهود به هیچ عنوان ارزش ریاضی ندارد.
     
    
    \solution*{پاسخ صحیح}  
-   \\
+   
+   
    با ناوردایی مساله را حل می‌کنیم. مقدار ناوردا در این مساله، تعداد جملات متمایز و متفاوت است. اولین دنباله‌ی جدید ایجاد شده را در نظر بگیرید.
     در این دنباله به تعداد عددهایی که در دنباله‌ی قبلی
     $\mathrm{i}$
@@ -781,9 +799,10 @@ $ x_1 $
     خواهیم داشت. بدین ترتیب در هرگام تعداد جملات متمایز موجود در دنباله همواره کاهش می‌یابد.
      اگر زمانی باشد که این تعداد ثابت بماند، دنباله در مرحله‌ی بعد و دومرحله‌ بعد آن یکسان خواهند بود و مساله حل است. در غیر این صورت یک تابع ناوردای کاهشی داریم.
     از طرفی کران گام نیز داریم. چون تعداد عدد صحیح می‌باشد، این کران یک خواهد بود. هم‌چنین چون مقدار ناوردای کاهشی داریم و همواره در طی گام‌ها
-    مقدار ناوردای انتخابی کم می‌شود و کران پایین هم داریم (تعداد جملات در کمترین حالت ممکن می‌توانند صفر باشند.)؛ بالاخره به نقطه‌ای خواهیم رسید
+    مقدار ناوردای انتخابی کم می‌شود و کران پایین هم داریم (تعداد جملات در کمترین حالت ممکن می‌توانند صفر باشند)، بالاخره به نقطه‌ای خواهیم رسید
     که تعداد جملات متمایز یک خواهد بود و تمام جملات دنباله یکسان می‌شوند و از آن پس دیگر دنباله‌ی متمایز نخواهیم داشت. 
     \\
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%% question 3 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 \question
 ثابت کنید ۱۰۰۰۰۰ عدد طبیعی متوالی می توان یافت که در بین آن‌ها دقیقا ۵ عدد اول وجود دارد.
 \solution
@@ -800,6 +819,7 @@ $ x_1 $
 \[100000!, 100000!+1,100000!+2 ,..., 100000!+99999\]
 را در نظر بگیرید, این دنباله حداکثر ۱ عدد اول دارد.
 حال از دنباله اولیه شروع می کنیم و در هر گام, کوچک‌ترین عدد دنباله را حذف کرده و عدد بعد از بزرگ‌ترین عدد را به آن اضافه می کنیم. در هر گام تعداد اعداد اول دنباله حداکثر یک واحد تغییر می کند. بنابر این چون در ابتدا دنباله بیش از ۵ عدد اول و در زمان رسیدن به دنباله دوم, حداکثر ۱ عدد اول دارد, دنباله ای در این گام ها وجود دارد که دقیقا ۵ عدد اول دارد.
+%%%%%%%%%%%%%%%%%%%%%%%%% question 4 %%%%%%%%%%%%%%%%%%%%%%%%%%
 \question
 سه دسته سنگریزه داریم که به ترتیب شامل ۱۱، ۱۸۵ و ۱۸۹ سنگریزه هستند. در هر حرکت می توانیم دو دسته از سنگریزه‌ها را با هم ترکیب کرده و یا یک دسته که تعداد زوجی سنگریزه دارد را به دو دسته با تعداد سنگریزه‌های یکسان تقسیم کنیم. 
 آیا می‌توان در نهایت به ۳۸۵ دسته برسیم که هر کدام ۱ سنگریزه دارند؟
