edit q3.3 ,edit q3.4's note

--- a/h2wp.tex
+++ b/h2wp.tex
@@ -688,7 +688,7 @@ $ x_1 $
  $ (a_1 + 1) * (a_2 + 1) * (a_3 + 1 ) * ... * (a_n + 1) $
  بوده است.
  
-\Tnote{n25}
+\Enote{n25}
  اثبات ناوردا بودن یک مقدار از مهم‌ترین موارد مساله‌ها‌ی ناوردایی می‌باشد. در این پاسخ، این مورد اثبات نشده است.
  
  
@@ -776,7 +776,7 @@ $ x_1 $
     خیر این حالت امکان‌پذیر نیست. چون لازم است تعداد اعداد تکرار شده در هر مرحله باهم متفاوت باشد و پس از گذر از چند مرحله این امکان از بین می‌رود.
    \\
     \notes
-    \Tnote{n26}
+    \Enote{n26}
     استدلال فوق شهودی است و شهود به هیچ عنوان ارزش ریاضی ندارد.
     
    
@@ -804,10 +804,12 @@ $ x_1 $
     \\
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%% question 3 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 \question
-ثابت کنید ۱۰۰۰۰۰ عدد طبیعی متوالی می توان یافت که در بین آن‌ها دقیقا ۵ عدد اول وجود دارد.
+ثابت کنید ۱۰۰۰۰۰ عدد طبیعی متوالی می‌توان یافت که در بین آن‌ها دقیقا ۵ عدد اول وجود دارد.
 \solution
 
-اعداد ۱ تا ۱۰۰۰۰۰ را در نظر بگیرید, بین این اعداد بیشتر از ۵ عدد اول وجود دارد.\\ حال دنباله اعداد
+اعداد ۱ تا ۱۰۰۰۰۰ را در نظر بگیرید, بین این اعداد بیشتر از ۵ عدد اول وجود دارد.
+
+ حال دنباله اعداد
 \[100000!, 100000!+1,100000!+2 ,..., 100000!+99999\]
 را در نظر بگیرید, این دنباله حداکثر ۱ عدد اول دارد بنابراین قطعا بین این دنباله و دنباله اعداد ۱ تا ۱۰۰۰۰۰ دنباله‌ای وجود دارد که دقیقا ۵ عدد اول دارد.
 \notes
@@ -815,21 +817,34 @@ $ x_1 $
 نتیجه گیری نهایی نیاز به اثبات دارد.
 \solution*{پاسخ صحیح}
 
-اعداد ۱ تا ۱۰۰۰۰۰ را در نظر بگیرید, بین این اعداد حداقل ۶ عدد اول وجود دارد.(2,3,5,7,11,13)\\ حال دنباله اعداد
+اعداد ۱ تا ۱۰۰۰۰۰ را در نظر بگیرید, بین این اعداد حداقل ۶ عدد اول وجود دارد.(2,3,5,7,11,13)
+
+ حال دنباله اعداد
 \[100000!, 100000!+1,100000!+2 ,..., 100000!+99999\]
-را در نظر بگیرید, این دنباله حداکثر ۱ عدد اول دارد.
-حال از دنباله اولیه شروع می کنیم و در هر گام, کوچک‌ترین عدد دنباله را حذف کرده و عدد بعد از بزرگ‌ترین عدد را به آن اضافه می کنیم. در هر گام تعداد اعداد اول دنباله حداکثر یک واحد تغییر می کند. بنابر این چون در ابتدا دنباله بیش از ۵ عدد اول و در زمان رسیدن به دنباله دوم, حداکثر ۱ عدد اول دارد, دنباله ای در این گام ها وجود دارد که دقیقا ۵ عدد اول دارد.
+را در نظر بگیرید, این دنباله حداکثر ۱ عدد اول دارد. چون به ازای تمام ‭‭$i$ 
+های بین ۲ و ۹۹۹۹۹ داریم: 
+\[100000!+i=i(\dfrac{(100000!)}{i} +1)\]
+پس این اعداد اول نیستند و تنها عددی که ممکن است اول باشد عدد 
+$100000!+1$
+است.
+
+
+ حال از دنباله اولیه شروع می کنیم و در هر گام, کوچک‌ترین عدد دنباله را حذف کرده و عدد بعد از بزرگ‌ترین عدد را به آن اضافه می کنیم. در هر گام تعداد اعداد اول دنباله حداکثر یک واحد تغییر می‌کند. بنابراین چون در ابتدا دنباله بیش از ۵ عدد اول و در زمان رسیدن به دنباله دوم, حداکثر ۱ عدد اول دارد,طبق پیوستگی گسسته, دنباله‌ای در این گام‌ها وجود دارد که دقیقا ۵ عدد اول دارد.
 %%%%%%%%%%%%%%%%%%%%%%%%% question 4 %%%%%%%%%%%%%%%%%%%%%%%%%%
 \question
-سه دسته سنگریزه داریم که به ترتیب شامل ۱۱، ۱۸۵ و ۱۸۹ سنگریزه هستند. در هر حرکت می توانیم دو دسته از سنگریزه‌ها را با هم ترکیب کرده و یا یک دسته که تعداد زوجی سنگریزه دارد را به دو دسته با تعداد سنگریزه‌های یکسان تقسیم کنیم. 
-آیا می‌توان در نهایت به ۳۸۵ دسته برسیم که هر کدام ۱ سنگریزه دارند؟
+سه دسته سنگریزه داریم که به ترتیب شامل ۱۱، ۱۸۵ و ۱۸۹ سنگریزه هستند. در هر حرکت می‌توانیم دو دسته از سنگریزه‌ها را با هم ترکیب کرده و یا یک دسته که تعداد زوجی سنگریزه دارد را به دو دسته با تعداد سنگریزه‌های یکسان تقسیم کنیم. 
+آیا می‌توانیم در نهایت به ۳۸۵ دسته برسیم که هر کدام ۱ سنگریزه دارند؟
 \solution
 
-مشاهده می شود که برای این که به دسته های با یک سنگریزه برسیم, باید تعداد سنگریزه دسته ها مقسوم علیه مشترک بزرگتر از ۱ نداشته باشند زیرا مقسوم علیه مشترک در اینجا یک ناوردا است. در مورد این دسته ها هم این موضوع صدق می کند, 
+مشاهده می‌شود که برای این که به دسته های با یک سنگریزه برسیم, باید تعداد سنگریزه دسته‌ها مقسوم علیه مشترک بزرگتر از ۱ نداشته باشند زیرا مقسوم علیه مشترک در اینجا یک ناوردا است. در مورد این دسته‌ها هم این موضوع صدق می کند, 
 پس می توان این تقسیم را انجام داد.
 \notes
-\Enote{n36} اثبات ثابت بودن مقدار ناوردا ضروری است
-\Tnote{n37} توجه کنید که مقسوم علیه مشترک بیشتر از یک نداشتن دسته ها, شرط لازم برای برقراری حکم است اما کافی نیست, بنابرین نمی توان از آن برای اثبات درست بودن حکم استفاده کرد. 
+\\
+\ref{n25} 
+
+\Tnote{n37}
+نمی‌توان از برقرار بودن شرط لازم برای برقراری یک حکم, به درست بودن آن رسید.
+مثلا در این جواب, مقسوم علیه مشترک بیشتر از یک نداشتن دسته ها, شرط لازم برای برقراری حکم است اما کافی نیست, بنابرین نمی توان از آن برای اثبات درست بودن حکم استفاده کرد. 
 \solution*{پاسخ صحیح}
 
  برای شروع، از آن‌جایی که تعداد سنگ‌ها در تمامی دسته‌ها فرد است، فقط اجازه داریم که دو دسته را انتخاب کرده آن‌ها را با هم ترکیب کنیم.
