--- a/h2wp.tex
+++ b/h2wp.tex
@@ -224,7 +224,7 @@ $(1-4x)^{-5}$
   ضریب 
   $ x ^ {12} $
   است.
-$ {\textcolor{byzantine}{(E.XI)}}  $
+\refnote{n11}
 
 \begin{align*}
   \longrightarrow a_{12} = \binom{16}{12} 4 ^ {12}
@@ -332,7 +332,7 @@ $$\binom{16}{12} (4)^{12}$$
    مجموع این ۵ عدد صحیح برابر
   \lr{ $ 0 + 1 + 3 + 2 + n-10 = n-4 $} 
      است.
-     $ {\textcolor{byzantine}{(E.XIV)}}  $
+     \ref{n14}
      
     پس تابع مولد زیر را داریم.
     
@@ -840,7 +840,7 @@ $100000!+1$
 پس می توان این تقسیم را انجام داد.
 \notes
 \\
-\ref{n25} 
+\refnote{n25} 
 
 \Tnote{n37}
 نمی‌توان از برقرار بودن شرط لازم برای برقراری یک حکم, به درست بودن آن رسید.
@@ -858,19 +858,16 @@ $100000!+1$
         دسته‌ی ۱۸۹تایی و ۱۱تایی را برگزینیم. در نهایت دو دسته‌ی ۲۰۰تایی و ۱۸۵تایی خواهیم داشت.
     \end{enumerate}
     
-    مساله را با ناوردایی حل می‌کنیم. عددی مانند
-    $c$
-    را در نظر می‌گیریم.
-    مقدار ناوردا را در هر حالت باقی‌مانده‌ی تقسیم تعداد سنگ‌ریزه‌های موجود در هر دسته بر
-    $c$
-    در نظر می‌گیریم.
-    اثبات می‌کنیم اگر عددی وجود داشته باشد که باقی‌مانده‌ی تعداد دسته‌های اولیه بر آن برابر صفر باشد، این باقی‌مانده در تمامی مراحل همچنان صفر خواهد ماند.
-    فرض کنید
-    $c$ یک عدد اول باشد
-    ادعا می‌کنیم که اگر عدد اولی با چنین شرایطی یافت شود، با هر مرحله تقسیم و ترکیب دسته‌ها باز هم می‌تواند تعداد سنگ‌ریزه‌های موجود در هر دسته بشمارد.
-    (این بدان معنی است که تعداد سنگ‌ریزه‌های موجود در هر دسته بر عدد اول پیدا شده بخش‌پذیر باشد.)
-    حال به اثبات ادعای خود می‌پردازیم:\\
-    طبق نظریه‌ی اعداد، دو حالت زیر را به ازای عدد اول 
+    مساله را با ناوردایی حل می‌کنیم.
+    اثبات می‌کنیم اگر عدد اول و فردی وجود داشته باشد که باقی‌مانده‌ی تقسیم تعداد سنگ‌ر ها در دسته‌های اولیه بر آن برابر صفر باشد، این باقی‌مانده در تمامی مراحل همچنان صفر خواهد ماند.
+    
+   اثبات:
+   
+   
+      این عدد را 
+      $\mathrm{p}$
+      می نامیم,    
+    دو حالت زیر را به ازای عدد اول 
     $\mathrm{P|P>2}$
     برقرار است.
     \begin{enumerate}
@@ -895,13 +892,17 @@ $100000!+1$
             if\;P|2c \to P|c \\ \nonumber
         \end{align}
     \end{enumerate}
-    مجددا تاکید شود که رابطه‌ی ۵ و ۶ به ازای عدد اول بزرگ‌تر از ۲ برقرار است.\\
+    مجددا تاکید شود که رابطه‌ی ۵ و ۶ به ازای عدد اول بزرگ‌تر از ۲ برقرار است.
+    
+    
     بنابراین باقی‌مانده‌ی تعداد سنگ‌ریزه‌های هر دسته بر عددی مانند
-    $c$
+    $p$
     با شرایط فوق، همواره صفر خواهد ماند و ثابت است.
     حال با توجه به این اثبات کافیست برای هر یکی از سه حالت بالا، عدد اولی بیابیم که هر دو دسته را بتواند بشمارد.
     در صورتی‌که چنین چیزی ممکن باشد، تعداد سنگ‌ریزه‌های موجود در هردسته در هریکی از حالات کران پایین خواهد داشت و به ازای هر گام، تعداد سنگ‌ریزه‌هایش همواره بزرگ‌تر مساوی آن کران خواهد بود؛
-    که این کران همان عدد اول پیدا شده است.\\
+    که این کران همان عدد اول پیدا شده است.
+    
+    
     برای حالت اول، عدد ۱۱، در حالت دوم، عدد ۷ و در حالت سوم، عدد ۵، سه عدد اول بزرگ‌تر از ۲ هستند که می‌توانند تعداد سنگ‌ریزه‌های موجود در هردودسته را بشمارند.
     بدین ترتیب تعداد سنگ‌ریزه‌های موجود در هر دسته‌‌ی ایجاد شده هیچ‌گاه از عدد اول شمارنده‌ی آن کمتر نخواهد شد.
     پس هیچ‌گاه نمی‌توانیم ۱۸۱ دسته سنگ‌ریزه داشته باشیم که هریک فقط یک سنگ‌ریزه داشته باشد.\\
