--- a/h2wp.tex
+++ b/h2wp.tex
@@ -796,7 +796,7 @@ $ x_1 $
     $\mathrm{x \times i}$
     جمله با مقدار
     $\mathrm{i}$
-    خواهیم داشت. بدین ترتیب در هرگام تعداد جملات متمایز موجود در دنباله همواره کاهش می‌یابد.
+    خواهیم داشت. بدین ترتیب در هرگام تعداد جملات متمایز موجود در دنباله همواره کاهش می‌یابد یا ثابت می‌ماند.
      اگر زمانی باشد که این تعداد ثابت بماند، دنباله در مرحله‌ی بعد و دومرحله‌ بعد آن یکسان خواهند بود و مساله حل است. در غیر این صورت یک تابع ناوردای کاهشی داریم.
     از طرفی کران گام نیز داریم. چون تعداد عدد صحیح می‌باشد، این کران یک خواهد بود. هم‌چنین چون مقدار ناوردای کاهشی داریم و همواره در طی گام‌ها
     مقدار ناوردای انتخابی کم می‌شود و کران پایین هم داریم (تعداد جملات در کمترین حالت ممکن می‌توانند صفر باشند)، بالاخره به نقطه‌ای خواهیم رسید
