add solution 2 of q3.2

--- a/h2wp.tex
+++ b/h2wp.tex
@@ -779,6 +779,29 @@ $ x_1 $
     \Enote{n26}
     استدلال فوق شهودی است و شهود به هیچ عنوان ارزش ریاضی ندارد.
     
+    
+    \solution
+    
+    
+    عدد‌ها در هر ستون را ناوردا در نظر می‌گیریم. واضح است این اعداد کران‌دار هستند پس یک جایی همه این ثابت می‌مانند و دو دنباله متوالی وجود خواهد داشت که باهم برابر باشند.
+    
+  
+  
+    
+    \notes
+    
+    
+    \refnote{n25}
+    
+    
+    \Tnote{n26.5}
+    اشاره و اثبات نوع ناوردا ضروری است. نوع ناوردا می‌تواند ثابت یا افزایشی یا کاهشی باشد.
+ \\   
+     در این پاسخ نوع ناوردا غیر نزولی است زیرا اعداد در یک ستون از عدد دوم به بعد یا افزایش می‌یابند یا ثابت می‌مانند.
+ \\   
+     توجه کنید ممکن است در سوالاتی که ناوردای کاهشی یا افزایشی دارند تغییرات یک متغیر ناوردا باشد و نه مقدار آن. این موضوع را در پاسخ صحیح همین سوال مورد توجه قرار دهید.
+    
+    
    
    \solution*{پاسخ صحیح}  
    
@@ -796,7 +819,9 @@ $ x_1 $
     $\mathrm{x \times i}$
     جمله با مقدار
     $\mathrm{i}$
-    خواهیم داشت. بدین ترتیب در هرگام تعداد جملات متمایز موجود در دنباله همواره کاهش می‌یابد یا ثابت می‌ماند.
+    خواهیم داشت. بدین ترتیب در هرگام تعداد جملات متمایز موجود در دنباله  ( ناوردا) همواره کاهش می‌یابد یا ثابت می‌ماند چرا که 
+    $ x>=1 $
+    است.
      اگر زمانی باشد که این تعداد ثابت بماند، دنباله در مرحله‌ی بعد و دومرحله‌ بعد آن یکسان خواهند بود و مساله حل است. در غیر این صورت یک تابع ناوردای کاهشی داریم.
     از طرفی کران گام نیز داریم. چون تعداد عدد صحیح می‌باشد، این کران یک خواهد بود. هم‌چنین چون مقدار ناوردای کاهشی داریم و همواره در طی گام‌ها
     مقدار ناوردای انتخابی کم می‌شود و کران پایین هم داریم (تعداد جملات در کمترین حالت ممکن می‌توانند صفر باشند)، بالاخره به نقطه‌ای خواهیم رسید
