q3.3,q3.4 final edit(hopefully)

--- a/h2wp.tex
+++ b/h2wp.tex
@@ -833,13 +833,21 @@ $ x_1 $
 \solution
 
 اعداد ۱ تا ۱۰۰۰۰۰ را در نظر بگیرید, بین این اعداد بیشتر از ۵ عدد اول وجود دارد.
+\refnote{n36} 
 
  حال دنباله اعداد
 \[100000!, 100000!+1,100000!+2 ,..., 100000!+99999\]
-را در نظر بگیرید, این دنباله حداکثر ۱ عدد اول دارد بنابراین قطعا بین این دنباله و دنباله اعداد ۱ تا ۱۰۰۰۰۰ دنباله‌ای وجود دارد که دقیقا ۵ عدد اول دارد.
+را در نظر بگیرید, این دنباله حداکثر ۱ عدد اول دارد
+\refnote{n36} 
+بنابراین قطعا بین این دنباله و دنباله اعداد ۱ تا ۱۰۰۰۰۰ دنباله‌ای وجود دارد
+ که دقیقا ۵ عدد اول دارد.
 \notes
 \Enote{n35}
-نتیجه گیری نهایی نیاز به اثبات دارد.
+لازم است که گام ناوردا ذکر و اثبات شود.
+\Enote{n36}
+اثبات حکم های اشاره شده ضروری است .
+\Enote{n37}
+لازم است به استفاده از پیوستگی گسسته در این اثبات اشاره شود.
 \solution*{پاسخ صحیح}
 
 اعداد ۱ تا ۱۰۰۰۰۰ را در نظر بگیرید, بین این اعداد حداقل ۶ عدد اول وجود دارد.(2,3,5,7,11,13)
@@ -870,6 +878,70 @@ $100000!+1$
 \Tnote{n37}
 نمی‌توان از برقرار بودن شرط لازم برای برقراری یک حکم, به درست بودن آن رسید.
 مثلا در این جواب, مقسوم علیه مشترک بیشتر از یک نداشتن دسته ها, شرط لازم برای برقراری حکم است اما کافی نیست, بنابرین نمی توان از آن برای اثبات درست بودن حکم استفاده کرد. 
+\solution
+ برای شروع، از آن‌جایی که تعداد سنگ‌ها در تمامی دسته‌ها فرد است، فقط اجازه داریم که دو دسته را انتخاب کرده آن‌ها را با هم ترکیب کنیم.
+    بر این اساس، سه حالت پیش می‌آید.
+    \begin{enumerate}
+        \item 
+        دسته‌ی ۱۸۵ و ۱۸۹تایی را جهت ترکیب شدن انتخاب کنیم. در این صورت با اجرای مرحله‌ی اول دو دسته‌ی ۳۷۴تایی و ۱۱تایی خواهیم داشت.
+        \item 
+        دسته‌ی ۱۱ و ۱۸۵تایی را انتخاب کنیم. دو دسته‌ی نهایی باقی‌مانده ۱۹۶تایی و ۱۸۹تایی خواهند بود.
+        \item
+        دسته‌ی ۱۸۹تایی و ۱۱تایی را برگزینیم. در نهایت دو دسته‌ی ۲۰۰تایی و ۱۸۵تایی خواهیم داشت.
+    \end{enumerate}
+    
+  مساله را با ناوردایی حل می‌کنیم. عددی مانند
+    $c$
+    را در نظر می‌گیریم.
+    مقدار ناوردا را در هر حالت باقی‌مانده‌ی تقسیم تعداد سنگ‌ریزه‌های موجود در هر دسته بر
+    $c$
+   را در نظر می‌گیریم.
+    اثبات می‌کنیم اگر عددی وجود داشته باشد که باقی‌مانده‌ی تعداد دسته‌های اولیه بر آن برابر صفر باشد، این باقی‌مانده در تمامی مراحل همچنان صفر خواهد ماند.
+    فرض کنید
+    $c$ یک عدد اول باشد
+    ادعا می‌کنیم که اگر عدد اولی با چنین شرایطی یافت شود، با هر مرحله تقسیم و ترکیب دسته‌ها باز هم می‌تواند تعداد سنگ‌ریزه‌های موجود در هر دسته بشمارد.
+    (این بدان معنی است که تعداد سنگ‌ریزه‌های موجود در هر دسته بر عدد اول پیدا شده بخش‌پذیر باشد.)
+    حال به اثبات ادعای خود می‌پردازیم:\\
+    طبق نظریه‌ی اعداد، دو حالت زیر را به ازای عدد اول 
+    $\mathrm{P|P>2}$
+    برقرار است.
+    \begin{enumerate}
+        \item 
+        در صورتیکه
+        $\mathrm{P}$
+        بتواند هر دو دسته‌ي 
+        $\mathrm{a}$
+        و
+        $\mathrm{b}$
+         را بشمارد، ترکیب آن دو را نیز می‌تواند بشمارد.
+        \begin{align} 
+            if\; P|a\;\& P|b \to P|a+b \\ \nonumber
+        \end{align}
+        \item 
+        در صورتیکه
+        $\mathrm{P}$
+        بتواند دسته‌اي با تعداد عضو زوج مثل 
+        $\mathrm{2c}$
+         را بشمارد، نصف آن را نیز می‌تواند بشمارد.
+        \begin{align} 
+            if\;P|2c \to P|c \\ \nonumber
+        \end{align}
+    \end{enumerate}
+    مجددا تاکید شود که رابطه‌ی ۵ و ۶ به ازای عدد اول بزرگ‌تر از ۲ برقرار است.\\
+    بنابراین باقی‌مانده‌ی تعداد سنگ‌ریزه‌های هر دسته بر عددی مانند
+    $c$
+    با شرایط فوق، همواره صفر خواهد ماند و ثابت است.
+    حال با توجه به این اثبات کافیست برای هر یکی از سه حالت بالا، عدد اولی بیابیم که هر دو دسته را بتواند بشمارد.
+    در صورتی‌که چنین چیزی ممکن باشد، تعداد سنگ‌ریزه‌های موجود در هردسته در هریکی از حالات کران پایین خواهد داشت و به ازای هر گام، تعداد سنگ‌ریزه‌هایش همواره بزرگ‌تر مساوی آن کران خواهد بود؛
+    که این کران همان عدد اول پیدا شده است.\\
+    برای حالت اول، عدد ۱۱، در حالت دوم، عدد ۷ و در حالت سوم، عدد ۵، سه عدد اول بزرگ‌تر از ۲ هستند که می‌توانند تعداد سنگ‌ریزه‌های موجود در هردودسته را بشمارند.
+    بدین ترتیب تعداد سنگ‌ریزه‌های موجود در هر دسته‌‌ی ایجاد شده هیچ‌گاه از عدد اول شمارنده‌ی آن کمتر نخواهد شد.
+    پس هیچ‌گاه نمی‌توانیم ۱۸۱ دسته سنگ‌ریزه داشته باشیم که هریک فقط یک سنگ‌ریزه داشته باشد.\\
+
+\notes
+\Tnote{37}
+بالاتر ذکر شده بود که می خواهیم حکم را برای هر عدد دلخواه $c$ ثابت کنیم, اما جلوتر $c$ اول فرض شده و در نهایت هم برای $c>2$ اثبات شده است.
+تغییر فرض اثبات در مراحل بعد صحیح نیست و باید از ابتدا درست ذکر شود, چون در این حالت حکم متفاوتی با آنچه در ابتدا بیان کردیم, اثبات شده است.
 \solution*{پاسخ صحیح}
 
  برای شروع، از آن‌جایی که تعداد سنگ‌ها در تمامی دسته‌ها فرد است، فقط اجازه داریم که دو دسته را انتخاب کرده آن‌ها را با هم ترکیب کنیم.
@@ -884,7 +956,7 @@ $100000!+1$
     \end{enumerate}
     
     مساله را با ناوردایی حل می‌کنیم.
-    اثبات می‌کنیم اگر عدد اول و فردی وجود داشته باشد که باقی‌مانده‌ی تقسیم تعداد سنگ‌ر ها در دسته‌های اولیه بر آن برابر صفر باشد، این باقی‌مانده در تمامی مراحل همچنان صفر خواهد ماند.
+    اثبات می‌کنیم اگر عدد اول و فردی وجود داشته باشد که باقی‌مانده‌ی تقسیم تعداد سنگ‌ریزه ها در دسته‌های اولیه بر آن برابر صفر باشد، این باقی‌مانده در تمامی مراحل همچنان صفر خواهد ماند.
     
    اثبات:
    
@@ -892,8 +964,8 @@ $100000!+1$
       این عدد را 
       $\mathrm{p}$
       می نامیم,    
-    دو حالت زیر را به ازای عدد اول 
-    $\mathrm{P|P>2}$
+    دو حالت زیر را به ازای عدد اول فرد 
+    $\mathrm{P}$
     برقرار است.
     \begin{enumerate}
         \item 
